--- a/carnival/index.html
+++ b/carnival/index.html
@@ -7,7 +7,7 @@
         <header>
             <h1>Carnival Subpage</h1>
             <nav>
-                <a href="../index.html">Carnival</a>
+                <a href="../index.html">Home</a>
             </nav>
         </header>
     </body>
