--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <header>
             <h1>T-Tungsten Website</h1>
             <nav>
-                <a href="/carnival/">Carnival</a>
+                <a href="/carnival">Carnival</a>
             </nav>
         </header>
     </body>
