Changed page extensions

--- a/carnival.html
+++ b/carnival.html
@@ -7,7 +7,7 @@
         <header>
             <h1>Carnival Subpage</h1>
             <nav>
-                <a href="../">Home</a>
+                <a href="./">Home</a>
             </nav>
         </header>
     </body>
